--- a/app/assets/stylesheets/blog/body.css.less
+++ b/app/assets/stylesheets/blog/body.css.less
@@ -1,14 +1,14 @@
 @import 'twitter/bootstrap/mixins';
 
 body {
-  background-color: #eee;
-  background-image: url('/assets/bkg.png');
-  background-repeat: repeat-x;
-  background-color: #fff;
-  background-position: 0 79px;
-  padding-top: 100px;
+  margin: 0;
 }
 
+.wrapper {
+  width: 980px;
+  padding:0 10px;
+  margin: 0 auto;
+}
 .bordered {
   background-color: white;
   border-color: #cdcdcd;
