--- a/app/views/crowdblog/admin/posts/_form.html.slim
+++ b/app/views/crowdblog/admin/posts/_form.html.slim
@@ -5,26 +5,28 @@
       .controls
         = f.text_field :title, :class => "input-xlarge span5"
         span.help-inline.title
+    .control-group.cintillo
+      = f.label :cintillo, :class => 'control-label'
+      .controls
+        = f.text_field :cintillo, class: 'input-xlarge span5'
+        span.help-inline.title
+    .control-group.resumen
+      = f.label :resumen, class: 'control-label'
+      .controls
+        = f.text_field :resumen, class: 'input-xlarge span5'
+        span.help-inline.title
+    .control-group.categories
+      = f.label :category, class: 'control-label'
+      .controls
+        = collection_select(:post, :category_id, @categories, :id, :name, promp: 'true')
 
 .row
   .control-group.body
     .span12
       = label_tag 'post_body', 'Body', class: 'control-label'
-    .controls.span5
-      = f.text_area :body, :class => "span5", :rows => 20, "data-mercury" => "full", id: 'post_bodys'
-      span.help-inline= link_to 'Markdown syntax', 'http://daringfireball.net/projects/markdown/syntax', target: '_BLANK'
+    .controls.span12
+      = f.text_area :body, :class => "span12 redactor", :rows => 20, id: 'post_bodys'
 
-    #post-preview.span7
-      .inner
-
-.row.form-box
-  .span5
-    #uploader
-      .inner Drop images...
-
-  .span7#assets
-    - f.object.assets.each do |asset|
-      .asset= "![image alt](#{asset.attachment_url})"
 
 coffee:
   $ ->
