--- a/app/views/layouts/crowdblog/admin/base.html.slim
+++ b/app/views/layouts/crowdblog/admin/base.html.slim
@@ -4,13 +4,13 @@ html
     title Crowd Blog
     = stylesheet_link_tag "//netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/css/bootstrap-combined.min.css"
     = stylesheet_link_tag    :crowdblog, media: 'all'
-    = stylesheet_link_tag    :mercury, media: 'all'
+    = stylesheet_link_tag    :app_specific, media: 'all'
     = javascript_include_tag "//code.jquery.com/jquery-1.8.0.min.js"
     = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.1/underscore-min.js"
     = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.2/backbone-min.js"
     = javascript_include_tag "//netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/js/bootstrap.min.js"
     = javascript_include_tag :crowdblog
-    = javascript_include_tag :mercury
+    = javascript_include_tag :app_specific
     meta name="viewport" content="width=device-width, initial-scale=1.0"
     = csrf_meta_tags
 
