--- a/app/views/crowdblog/admin/posts/_form.html.slim
+++ b/app/views/crowdblog/admin/posts/_form.html.slim
@@ -19,6 +19,10 @@
       = f.label :category, class: 'control-label'
       .controls
         = collection_select(:post, :category_id, @categories, :id, :name, promp: 'true')
+    .control-group.tags
+      = f.label :tag_list, "Tags (separated by commas)"
+      .controls
+        = f.text_field :tag_list, class: 'input-xlarge span5'
 
 .row
   .control-group.body
