Image for posts

--- a/app/assets/stylesheets/app_specific/base.css.less
+++ b/app/assets/stylesheets/app_specific/base.css.less
@@ -1,3 +1,15 @@
 body, html {
   overflow: auto;
 }
+
+// image preciw
+img#filepick {
+  display: block;
+  width: 400px;
+
+}
+.image_set {
+  display: none;
+  height: 600px;
+  overflow: scroll;
+}
