--- a/app/views/admin/authors/index.html.slim
+++ b/app/views/admin/authors/index.html.slim
@@ -1,10 +1,7 @@
 h1 Authors
 
-= form_for [:admin, @category], class: 'form-inline' do |f|
-  = f.text_field :name, :placeholder => 'Nombre', class: 'input-small'
-  = f.button :submit, class: 'btn'
 
-table.table.table-striped'
+table.table.table-striped
   thead
     tr
       th
