--- a/app/views/layouts/crowdblog/admin/base.html.slim
+++ b/app/views/layouts/crowdblog/admin/base.html.slim
@@ -10,6 +10,7 @@ html
     = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.2/backbone-min.js"
     = javascript_include_tag "//netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/js/bootstrap.min.js"
     = javascript_include_tag :crowdblog
+    = filepicker_js_include_tag
     = javascript_include_tag :app_specific
     meta name="viewport" content="width=device-width, initial-scale=1.0"
     = csrf_meta_tags
