WIP construir portada

--- a/app/assets/stylesheets/blog/portada.css.less
+++ b/app/assets/stylesheets/blog/portada.css.less
@@ -59,11 +59,12 @@
           text-decoration: none;
         }
       }
+      .resumen {font-size: 13px;}
     }
 
     .resumen {
       color: #A1A1A0;
-      font-size: 12px;
+      font-size: 13px;
       background: url('/assets/resumen-more-icon.gif') no-repeat right bottom ;
       padding-bottom: 10px;
       &:hover {
