--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,4 +13,4 @@
  *= require 'highlight/sunburst'
  *= require_tree ./blog
 */
-
+@import url(http://fonts.googleapis.com/css?family=Titillium+Web&subset=latin,latin-ext);
