--- a/app/views/crowdblog/application/_navbar.html.slim
+++ b/app/views/crowdblog/application/_navbar.html.slim
@@ -7,4 +7,5 @@
         li= link_to 'Posts', crowdblog.admin_posts_path
         li= link_to 'Categories', main_app.admin_categories_path
         li= link_to 'Authors', main_app.admin_authors_path
+        li= link_to 'Portadas', main_app.admin_portadas_path
         li= link_to 'Sign out', main_app.destroy_user_session_path
