--- a/app/assets/stylesheets/app_specific/base.css.less
+++ b/app/assets/stylesheets/app_specific/base.css.less
@@ -13,3 +13,32 @@ img#filepick {
   height: 600px;
   overflow: scroll;
 }
+
+.droppable{
+  min-height: 270px;
+  li {
+    &.placeholder {
+      border: 2px dashed lightgray;
+      -webkit-border-radius: 6px;
+      -moz-border-radius: 6px;
+      border-radius: 6px;
+      color: lightgray;
+    }
+    list-style: none;
+    padding: 10px;
+    margin-bottom: 15px;
+
+
+  }
+}
+table.posts{
+
+  td {
+    cursor: move;
+  }
+}
+
+
+.search-news {
+  width: 590px;
+}
