--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -27,7 +27,8 @@ html
       .content.portada.pull-left
         = render 'portada/section_a'
         .clearfix
-        = link_to image_tag('banners/banner_e.gif'), '#'
+        = link_to image_tag('banners/banner_e.gif'), '#', class: 'banners'
         = render 'portada/dato_del_dia'
+        = render 'portada/section_b'
 
 
