--- a/app/views/layouts/crowdblog/admin/base.html.slim
+++ b/app/views/layouts/crowdblog/admin/base.html.slim
@@ -9,6 +9,7 @@ html
     = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.1/underscore-min.js"
     = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.2/backbone-min.js"
     = javascript_include_tag "//netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/js/bootstrap.min.js"
+    = javascript_include_tag "//code.jquery.com/ui/1.10.1/jquery-ui.js"
     = javascript_include_tag :crowdblog
     = filepicker_js_include_tag
     = javascript_include_tag :app_specific
