--- a/app/views/portada/_section_b.html.slim
+++ b/app/views/portada/_section_b.html.slim
@@ -13,8 +13,70 @@ section.section_b
           = link_to 'Aumentara 1 peso el transporte publico en autobuses', "#"
         li
           = link_to 'En julio tarjeta de descuento FEC', '#'
-  .column
-    article.noticia-s-x
+    article.noticia-secundaria-b
       .header
-        p.cintillo
-          | tmb
+        p.cintillo Informo rene rodriguez
+        = image_tag('portada/section-b-noticia-f.jpg', class: 'size-f')
+        h2Eliminaran Rezago del TCA en menos de meses
+        p.date 9 de noviembre | 6:43 pm
+    article.noticia-secundaria-c
+      .header
+        p.cintillo Informo rene rodriguez
+        = image_tag('portada/section-b-noticia-f.jpg', class: 'size-f')
+        h2 Eliminaran Rezago del TCA en menos de meses
+        p.date 9 de noviembre | 6:43 pm
+    article.noticia-secundaria-d
+      .header
+        p.cintillo señalo que corresponde a todos vigilar
+        h2 pide alcaldeza de cuahtemoc apurar mejoras al transporte publico
+        p.date 9 de marzo | 4:32pm
+    article.noticia-secundaria-f
+      .header
+        h2.titulo-tag Sucecion presindecial
+        p.cintillo por unanimidad de los magistrados
+        = image_tag('portada/section-a-noticia-b.jpg', class: 'size-d')
+        h2 Aprueba TEPJF destruccion de boletas 2012
+        p.dare 9 de noviembre | 2:30pm
+
+
+  .column
+    article.el-tiempo
+      .header
+        p.cintillo habra humedad 69%
+        h2 Mantiene colima cielo despejado este sabado
+    article.mas-recientes
+      h2.titulo-bloque Mas recientes
+      ul.related
+        li
+          = link_to '12:31 pm | Aumentara 1 peso el transporte publico en autobuses', "#"
+        li
+          = link_to '12:31 pm | En julio tarjeta de descuento FEC', '#'
+        li
+          = link_to '12:31 pm | En julio tarjeta de descuento FEC', '#'
+        li
+          = link_to '12:31 pm | En julio tarjeta de descuento FEC', '#'
+        li
+          = link_to '12:31 pm | En julio tarjeta de descuento FEC', '#'
+        li
+          = link_to '12:31 pm | En julio tarjeta de descuento FEC', '#'
+    article.resumen
+      h2.titulo-bloque Resumen
+      <iframe width="100%" height="68" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F86445413&amp;color=000000&amp;auto_play=false&amp;show_artwork=false"></iframe>
+    article.foto-nota
+      .header
+        = image_tag('portada/foto-nota-g.jpg', class: 'size-g')
+        p.date @juankamaney
+        h2 Nnueces con cascara, sin cascara, garapiñadas, una Tradicion en las fiestas de todos los santos
+
+
+
+
+
+
+
+
+
+
+
+
+
