change name of admin

--- a/app/views/layouts/crowdblog/admin/base.html.slim
+++ b/app/views/layouts/crowdblog/admin/base.html.slim
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title Crowd Blog
+    title Angelguardian Admin
     = stylesheet_link_tag "//netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/css/bootstrap-combined.min.css"
     = stylesheet_link_tag    :crowdblog, media: 'all'
     = stylesheet_link_tag    :app_specific, media: 'all'
