add solr, edit portada

--- a/app/assets/stylesheets/app_specific/base.css.less
+++ b/app/assets/stylesheets/app_specific/base.css.less
@@ -42,3 +42,14 @@ table.posts{
 .search-news {
   width: 590px;
 }
+
+form {
+  
+  #socials{
+    height: 80px;
+    border-bottom: 1px solid gray;
+    margin-bottom: 20px;
+
+  }
+
+}
