--- a/app/views/admin/portadas/edit.html.slim
+++ b/app/views/admin/portadas/edit.html.slim
@@ -9,18 +9,25 @@ h1 Portada nueva
     |
     Despues empieza a agregar contenido por secciones
 
-= form_for @portada, url: main_app.admin_portada_path(),  html: {class: 'form'} do |f|
+= form_for @portada, url: main_app.admin_portada_path(),  html: {class: 'form form-horizontal' } do |f|
   .container
     .well
-      .controls
-        = f.label :publication, 'Fecha de publicacion', class: 'label-control'
-        .input-append
-          = f.text_field :publication, class: 'datepicker'
-          span.add-on
-            i.icon-calendar
+      .controls-group
+        = f.label :publication, 'Fecha de publicacion', class: 'control-label'
+        .controls
+          .input-append
+            = f.text_field :publication, class: 'datepicker'
+            span.add-on
+              i.icon-calendar
     .row
       .span6
-        .search-news
+        .search-news#todas
+          .control-group
+            = label_tag 'Busca mas noticias', nil,class: 'control-label'
+            .controls
+              input.input-medium type="text" id="search-term"
+              = hidden_field_tag 'type','todas'
+              = link_to 'Buscar', "#", class: 'btn search'
           table.table.table-striped.posts
             thead
               tr
@@ -28,26 +35,25 @@ h1 Portada nueva
                 th Titulo Noticia
                 th Fecha
             tbody
-              - @posts.each do |post|
-                tr.draggable data-p_id==("#{post.id}")
-                  td= post.category.name
-                  td.title= post.title
-                  td= post.published_at.to_s :long
+              = render partial: 'admin/portadas/search_res', collection: @posts, as: :post
+
       .span6
         fieldset.fieldset
           legend Seccion: Principal
           = f.fields_for :home_sections, @principal do |principal|
             ul.droppable.well
-              li.placeholder data-index==("0") data-position==("0") data-section==("0")
-                span Noticia A
-              li.placeholder data-index==("1") data-position==("1") data-section==("0")
-                span Noticia B
-              li.placeholder data-index==("2") data-position==("2") data-section==("0")
-                span Noticia C
-              li.placeholder data-index==("3") data-position==("3") data-section==("0")
-                span Noticia D
-              li.placeholder data-index==("4") data-position==("4") data-section==("0")
-                span Noticia E
+              - count = 5
+              - @principal.posts.each_with_index do |post, i|
+                li.readey data-index=("#{i}") data-position=("#{i}") data-section=("0") data-id=("#{post.id}")
+                  span= post.title
+                  = link_to main_app.delete_post_admin_portada_path(@portada.id, @principal.id, post.id), method: 'delete', remote: true,  class: 'pull-right' do
+                    i.icon-trash
+                - count -= 1
+              
+              - count.times do |index|
+                - pos_index = index + 1
+                li.placeholder data-index=("#{pos_index}") data-position=("#{pos_index}") data-section=("0")
+                  span Noticia #{pos_index + 1}
             .section-posts
               = principal.fields_for :section_posts do |sp|
                 .hidden
@@ -56,22 +62,63 @@ h1 Portada nueva
           legend Section: Secundaria
           = f.fields_for :home_sections, @secundaria do |secundaria|
             ul.droppable.well
-              li.placeholder data-index==("0") data-position==("0") data-section==("1")
-                span Noticia A
-              li.placeholder data-index==("1") data-position==("1") data-section==("1")
-                span Noticia B
-              li.placeholder data-index==("2") data-position==("2") data-section==("1")
-                span Noticia C
-              li.placeholder data-index==("3") data-position==("3") data-section==("1")
-                span Noticia D
-              li.placeholder data-index==("4") data-position==("4") data-section==("1")
-                span Noticia E
+              - count = 5
+              - @secundaria.posts.each_with_index do |post, i|
+                li.readey data-index=("#{i}") data-position=("#{i}") data-section=("1") data-id=("#{post.id}")
+                  span= post.title
+                  = link_to main_app.delete_post_admin_portada_path(@portada.id, @secundaria.id, post.id), method: 'delete', remote: true,  class: 'pull-right' do
+                    i.icon-trash
+                - count -= 1
+
+              - count.times do |index|
+                - pos_index = index + 1
+                li.placeholder data-index=("#{pos_index}") data-position=("#{pos_index }") data-section=("1")
+                  span Noticia #{pos_index + 1}
             .section-posts
               = secundaria.fields_for :section_posts do |sp_2|
                 .hidden
 
     .row
-      .span12#socials style='height: 500px;'
+      .span12#socials
+    .row
+      .span6
+        .search-news#Policiacas
+          .control-group
+            = label_tag 'Busca mas noticias', nil,class: 'control-label'
+            .controls
+              input.input-medium type="text" id="search-term"
+              = hidden_field_tag 'type','Policiacas'
+              = link_to 'Buscar', "#", class: 'btn search'
+          table.table.table-striped.posts
+            thead
+              tr
+                th Categoria
+                th Titulo Noticia
+                th Fecha
+            tbody
+              = render partial: 'admin/portadas/search_res', collection: @policiacas_list, as: :post
+      .span6
+        fieldset.fieldset
+          legend Section: Policiacas
+          = f.fields_for :home_sections, @policiacas do |policiacas|
+            ul.droppable.well
+              - count = 3
+              - @policiacas.posts.each_with_index do |post, i|
+                li.readey data-index=("#{i}") data-position=("#{i}") data-section=("2") data-id=("#{post.id}")
+                  span= post.title
+                  = link_to main_app.delete_post_admin_portada_path(@portada.id, @policiacas.id, post.id), method: 'delete', remote: true,  class: 'pull-right' do
+                    i.icon-trash
+                - count -= 1
+
+              - count.times do |index|
+                - pos_index = index + 1
+                li.placeholder data-index=("#{pos_index}") data-position=("#{pos_index }") data-section=("2")
+                  span Noticia #{pos_index }
+            .section-posts
+              = policiacas.fields_for :section_posts do |sp_2|
+                .hidden
+
+
     .form-actions
       = f.submit class: 'btn btn-primary'
 
@@ -82,7 +129,4 @@ javascript:
     $('.datepicker').attr('value',ev.date);
   });
 
-  $('#principal_auto').bind('railsAutocomplete.select', function(event, data){
-    alert(data.item.id);
-  });
-  $('.search-news').scrollToFixed({ marginTop: 10, limit: $('#socials').offset().top - $('.search-news table').height()});
+  $('.search-news#todas').scrollToFixed({ marginTop: 10, limit: $('#socials').offset().top - $('.search-news#todas table').height()});
