--- a/app/views/admin/portadas/index.html.slim
+++ b/app/views/admin/portadas/index.html.slim
@@ -16,6 +16,6 @@ table.table.table-striped
         th= portada.id
         td= portada.publication
         td
-          = link_to 'Edit', '#', class: 'btn'
-          = link_to 'delete', '#', class: 'btn btn-danger'
+          = link_to 'Edit', main_app.edit_admin_portada_path(portada.id), class: 'btn'
+          = link_to 'delete', main_app.admin_portada_path(portada), method: :delete, confirm: 'Are you sure?', class: 'btn btn-danger'
 
