WIP hook up home page

--- a/app/views/crowdblog/admin/posts/_form.html.slim
+++ b/app/views/crowdblog/admin/posts/_form.html.slim
@@ -6,7 +6,7 @@
         = f.text_field :title, :class => "input-xlarge span5"
         span.help-inline.title
     .control-group.cintillo
-      = f.label :cintillo, :class => 'control-label'
+      = f.label :cintillo, 'Balazo', :class => 'control-label'
       .controls
         = f.text_field :cintillo, class: 'input-xlarge span5'
         span.help-inline.title
