--- a/app/views/admin/categories/index.html.slim
+++ b/app/views/admin/categories/index.html.slim
@@ -13,7 +13,16 @@ table.table.table-striped
       th
   tbody
     - @categories.each do |category|
-      tr
-        td= category.id
-        td= category.name
-        td= link_to 'Delete', '#'
+      - unless category.parent_id
+        tr id="category_#{category.id}"
+          td= category.id
+          td
+            = link_to '+ ', main_app.new_admin_category_path(id: category.id), remote: true
+            = category.name
+          td= link_to 'Delete', "/admin/categories/#{category.id}", method: :delete, confirm: "Estas seguro?"
+        - category.subcategories.each do |sub_cat|
+          tr class='sub_category'
+            td= sub_cat.id
+            td= sub_cat.name
+            td= link_to 'Delete', "/admin/categories/#{sub_cat.id}", method: :delete, confirm: "Estas seguro?"
+
