--- a/app/views/admin/categories/index.html.slim
+++ b/app/views/admin/categories/index.html.slim
@@ -18,11 +18,14 @@ table.table.table-striped
           td= category.id
           td
             = link_to '+ ', main_app.new_admin_category_path(id: category.id), remote: true
-            = category.name
+            a#editable data-pk="#{category.id}" class="editable" data-title="Enter username" data-type="text" data-url="/admin/categories/#{category.id}" href="#"
+              = category.name
           td= link_to 'Delete', "/admin/categories/#{category.id}", method: :delete, confirm: "Estas seguro?"
         - category.subcategories.each do |sub_cat|
           tr class='sub_category'
             td= sub_cat.id
-            td= sub_cat.name
+            td
+              a#editable data-pk="#{sub_cat.id}" class="editable" data-title="Enter username" data-type="text" data-url="/admin/categories/#{sub_cat.id}" href="#"
+                = sub_cat.name
             td= link_to 'Delete', "/admin/categories/#{sub_cat.id}", method: :delete, confirm: "Estas seguro?"
 
