--- a/app/views/layouts/crowdblog/admin/base.html.slim
+++ b/app/views/layouts/crowdblog/admin/base.html.slim
@@ -3,6 +3,7 @@ html
   head
     title Angelguardian Admin
     = stylesheet_link_tag "//netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/css/bootstrap-combined.min.css"
+    = stylesheet_link_tag "//cdnjs.cloudflare.com/ajax/libs/x-editable/1.4.5/bootstrap-editable/css/bootstrap-editable.css"
     = stylesheet_link_tag    :crowdblog, media: 'all'
     = stylesheet_link_tag    :app_specific, media: 'all'
     = javascript_include_tag "//code.jquery.com/jquery-1.8.0.min.js"
@@ -10,6 +11,7 @@ html
     = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.2/backbone-min.js"
     = javascript_include_tag "//netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/js/bootstrap.min.js"
     = javascript_include_tag "//code.jquery.com/ui/1.10.1/jquery-ui.js"
+    = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/x-editable/1.4.5/bootstrap-editable/js/bootstrap-editable.min.js"
     = javascript_include_tag :crowdblog
     = filepicker_js_include_tag
     = javascript_include_tag :app_specific
