--- a/app/assets/stylesheets/app_specific/base.css.less
+++ b/app/assets/stylesheets/app_specific/base.css.less
@@ -45,9 +45,8 @@ table.posts{
 
 form {
   
-  #socials{
-    height: 80px;
-    border-bottom: 1px solid gray;
+  #socials, #dato-del-dia{
+      border-bottom: 1px solid gray;
     margin-bottom: 20px;
 
   }
