--- a/app/assets/stylesheets/blog/portada.css.less
+++ b/app/assets/stylesheets/blog/portada.css.less
@@ -231,6 +231,7 @@
     }
     article {
       padding-bottom: 0px;
+      clear: both;
     }
     .policiaca-a .header {
       margin-top: 14px;
