--- a/app/views/admin/portadas/search_post.js.haml
+++ b/app/views/admin/portadas/search_post.js.haml
@@ -1,5 +1,4 @@
+console.log("#{@posts}")
 - unless @posts.empty?
   $(".search-news##{@type} table tbody").html("#{escape_javascript(render partial: 'admin/portadas/search_res', collection: @posts, as: 'post')}")
-
   $( ".draggable" ).draggable({ connectToSortable: ".droppable", helper: "clone", revert: "invalid" });
-  
