--- a/app/views/portada/_dato_del_dia.html.slim
+++ b/app/views/portada/_dato_del_dia.html.slim
@@ -1,8 +1,4 @@
 .dato-del-dia
   h2.titulo-bloque Dato del día
   a href="#"
-    | Aumentara de $
-    span 10.63
-    | a $
-    span 19.72
-    pesos la gasolina magma
+    = raw @portada.datodeldia
