--- a/app/views/portada/_policiacas.html.slim
+++ b/app/views/portada/_policiacas.html.slim
@@ -4,9 +4,10 @@ section.policiacas
     h2.titulo-bloque Policiacas
     article.policiaca-a
       .header
-        =image_tag('portada/policiacas-a.jpg', class: 'size-h')
-        h2 Arrestan a un sujeto por robo de vehiculo
-        p.date 2 de noviembre | 10:43 pm
+        = image_tag(@policiacas.posts[0].image.size_h, class: 'size-h')
+
+        h2= @policiacas.posts[0].title
+        p.date= @policiacas.posts[0].published_at
         ul.related
           li
             = link_to '12:31 pm | Aumentara 1 peso el transporte publico en autobuses', "#"
@@ -16,21 +17,17 @@ section.policiacas
             = link_to '12:31 pm | En julio tarjeta de descuento FEC', '#'
     article.policiaca-b
       .header
-        =image_tag('portada/policiacas-b.jpg', class: 'size-i right')
-        h2 Buscan policias a los asesions de dos hombres en tecoman
-        p.date 4 de noviembre | 12:30pm
+        = image_tag(@policiacas.posts[1].image.size_i, class: 'size-i right')
+        h2= @policiacas.posts[1].title
+        p.date= @policiacas.posts[1].published_at?
     article.policiaca-c
       .header
-        =image_tag('portada/policiacas-b.jpg', class: 'size-i')
-        h2 Buscan policias a los asesions de dos hombres en tecoman
-        p.date 4 de noviembre | 12:30pm
+        = image_tag(@policiacas.posts[2].image.size_i, class: 'size-i')
+        h2= @policiacas.posts[2].title
+        p.date= @policiacas.posts[2].published_at
   
   .dato-del-dia.policiaca
     h2.titulo-bloque Dato del día
     a href="#"
-      | Militares detectan a un sujeto que portaba
-      span 10
-      | paquetes de marihuana, con peso de 
-      span 19
-      pesos Kgs.
+      = raw @portada.datopolicia
 
